--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ pandas >= 2.0.3
 sentence_transformers >= 2.7.0
 json >= 2.0.9
 datasets ~= 2.19.2
+matplotlib~=3.8.4
+numpy~=1.26.4
+pacmap~=0.7.2
+trimap~=1.1.4
